# whilep-interpreter

./: Cargo.toml  README.md  build.rs  test.whilep  test.wp  test.wstate
docs/: main.typ
docs/theme/: unipd.typ
example/: test-op.wp  test.wp
src/: abstract_domain.rs  abstract_semantics.rs  abstract_state.rs  ast.rs  cli.rs  concrete.rs  concrete_semantics.rs  concrete_state.rs  domain.rs  eval.rs  integer.rs  interval.rs  interval_domain.rs  invariant.rs  lattice.rs  main.rs  pretty_print.rs  state.rs  whilep.lalrpop
src/abstract_semantics/: denote.rs  invariant.rs  mod.rs  state.rs
src/concrete_semantics/: denote.rs  mod.rs  state.rs
src/domain/: constant.rs  domain.rs  expression_tree.rs  interval.rs  lattice.rs  mod.rs
src/parser/: ast.rs  mod.rs  program_point.rs  whilep.rs
src/types/: integer.rs  mod.rs  sign.rs
src/utils/: math.rs
