[package]
name = "whilep"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "regex", "unicode"] }
rand = "0.8.5"
trait-set = "0.3.0"
cli-tables = "0.1.0"
colored = "2.1.0"
